tests/errors/scalar_slot_requires_cast.dang
# String! is not implicitly assignable to ID! in a typed slot.
pub id: ID! = "abc"
